@@ -172,6 +172,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Oracle 11i             Simon Redhead
 - Oxygene (Delphi Prism) Carlo Kok
 - Oz                     Wolfgang Meyer
+- ParaSail               sttaft
 - PARI/GP                Charles R Greathouse IV
 - Pascal                 Tux
 - PCRE                   Benny Baumann
