@@ -23,6 +23,7 @@ Version 1.0.8.11
      * LDIF (Bruno Harbulot)
      * Nagios (Albéric de Pertat)
      * Octave (Carnë Draug, Juan Pablo Carbajal)
+     * ParaSail (sttaft)
      * PARI/GP (Charles R Greathouse IV)
      * Python for S60 (Sohan Basak)
      * Rexx (Jon Wolfers)
